# aipm

./: .gitignore  .justfile  .pre-commit-config.yaml  AGENTS.md  LICENSE  PLAN.md  README.md  aipm.toml  goals.md  milestones.md  pyproject.toml
doc/: check.md  debug.md  format.md  planning.md  skills.md  summary.md  sync.md  tutorial.md
docs/report/: index.html  plan.html  plan.md  summary_day.html  summary_day.md  summary_month.html  summary_month.md  summary_month_chris.html  summary_month_chris.md  summary_month_claude.html  summary_month_claude.md  summary_week.html  summary_week.md  summary_week_chris.html  summary_week_chris.md  summary_week_claude.html  summary_week_claude.md  summary_year.html  summary_year.md
scripts/: list_models.py  test_copilot_sdk.py
skills/aipm-create-ticket/: SKILL.md
src/aipm/: __init__.py  cli.py  config.py  horizons.py  utils.py
src/aipm/commands/: __init__.py  add.py  check.py  commit.py  diff.py  init.py  plan.py  report.py  summary.py  sync.py  ticket.py  upgrade.py
src/aipm/sources/: __init__.py  base.py  github_source.py  jira_source.py
tests/: conftest.py  test_check.py  test_horizons.py  test_init.py  test_plan.py  test_report.py  test_summary.py  test_ticket.py  test_upgrade.py
tickets/local/: 0001_create_local_set_tickets_for_testing.md  0002_test_and_extend_copilot_integration.md  0003_add_generation_support_for_the_plans_and_dashboards.md  0004_add_due_date_feature.md  0005_add_debug_mode_for_check.md  0006_test_github_and_jira_integration.md  0007_evaluate_using_markdown_frontmatter_format_for_ticket_sync_a.md
(+7 files in other folders)
